fix alignment of empty directory info text

--- a/style/table.scss
+++ b/style/table.scss
@@ -69,6 +69,7 @@ main {
     overflow-x: auto;
 
     > h1 {
+        margin: auto;
         text-align: center;
     }
 
